# crm

./: .coverage  .env.example  Makefile  database.dbml  pyproject.toml  readme.md
app/application/: container.py  mediator.py
app/application/base/: exceptions.py
app/application/organizations/commands/: __init__.py  members.py  organizations.py
app/application/organizations/queries/: __init__.py  members.py  organizations.py
app/application/sales/commands/: __init__.py  activities.py  contacts.py  deals.py  tasks.py
app/application/sales/queries/: __init__.py  activities.py  analytics.py  contacts.py  deals.py  tasks.py
app/domain/base/: filters.py
app/domain/organization/entities/: __init__.py  member.py  organization.py
app/domain/organization/exceptions/: __init__.py  member.py  organization.py
app/domain/organization/services/: __init__.py  member.py  organization.py
app/domain/organization/value_objects/: __init__.py  member.py  organization.py
app/domain/organizations/entities/: __init__.py  members.py  organizations.py
app/domain/organizations/exceptions/: __init__.py  members.py
app/domain/organizations/filters/: __init__.py  members.py  organizations.py
app/domain/organizations/services/: __init__.py  members.py  organizations.py
app/domain/organizations/value_objects/: __init__.py  members.py  organizations.py
app/domain/sales/entities/: __init__.py  activities.py  activity.py  contact.py  contacts.py  deal.py  deals.py  task.py  tasks.py
app/domain/sales/exceptions/: __init__.py  sales.py
app/presentation/admin/: __init__.py  auth_provider.py
app/presentation/api/: auth.py  dependencies.py  exceptions.py  main.py  schemas.py
app/settings/: config.py
app/tests/: fixtures.py
(+165 files in other folders)
